hphp/hack/test/sound_dynamic/typing/dynamic_array.bad.php.exp
File "dynamic_array.bad.php", line 6, characters 3-12:
Typing error (Typing[4110])
  File "dynamic_array.bad.php", line 5, characters 25-31:
  Expected `dynamic`
  File "dynamic_array.bad.php", line 5, characters 37-37:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
File "dynamic_array.bad.php", line 7, characters 3-13:
Typing error (Typing[4110])
  File "dynamic_array.bad.php", line 5, characters 25-31:
  Expected `dynamic`
  File "dynamic_array.bad.php", line 5, characters 37-37:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
File "dynamic_array.bad.php", line 8, characters 3-11:
Typing error (Typing[4110])
  File "dynamic_array.bad.php", line 5, characters 25-31:
  Expected `dynamic`
  File "dynamic_array.bad.php", line 5, characters 37-37:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
File "dynamic_array.bad.php", line 9, characters 3-8:
Typing error (Typing[4110])
  File "dynamic_array.bad.php", line 5, characters 25-31:
  Expected `dynamic`
  File "dynamic_array.bad.php", line 5, characters 37-37:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
File "dynamic_array.bad.php", line 10, characters 3-12:
Typing error (Typing[4110])
  File "dynamic_array.bad.php", line 5, characters 25-31:
  Expected `dynamic`
  File "dynamic_array.bad.php", line 5, characters 37-37:
  Type `C` is not a subtype of `dynamic` under dynamic-aware subtyping
